// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Basic smoke test > Should recover from errors 1`] = `"An error occurred whilst rendering /home/rowlands/git/vite-plugin-twig-drupal/tests/fixtures/error.twig: Error compiling twig file"`;

exports[`Basic smoke test > Should support includes 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
    </article>
</section>
<section>
  <h1></h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
"
`;

exports[`Basic smoke test > Should support variables 1`] = `
"<section>
  <h1>Include</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
<section>
  <h1>Embed</h1>
  <article>
        Lorem ipsum dolor sit amet.
    <button class=\\"button--primary\\">Nested include</button>
    </article>
</section>
<section>
  <h1>Pickle Fixie</h1>
  <article>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dignissimos fugiat inventore laborum maiores molestiae neque quia quo unde veniam?
      </article>
</section>
"
`;
